,/platform/observability/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: grafana

  namespace: monitoring

spec:

  ingressClassName: nginx

  rules:

  - host: grafana.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: monitoring-grafana

            port:

              number: 80
